# deepvu-api

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2b3e344a87cd_initial_tables.py
docs/: ARCHITECTURE.md
scripts/: seed_duckdb.py
src/deepvu/: config.py  dashboard_config.py  database.py  dependencies.py  exceptions.py  main.py  redis.py
src/deepvu/analytics/: __init__.py  bigquery_backend.py  duckdb_backend.py  protocol.py  rls_injector.py  rls_validator.py  seed_data.py
src/deepvu/auth/: __init__.py  jwt_handler.py
src/deepvu/middleware/: __init__.py  audit_log.py  auth.py  rate_limiter.py  rls.py  tenant_resolver.py
src/deepvu/models/: __init__.py  base.py  rls.py  tenant.py  user.py
src/deepvu/repositories/: __init__.py  rls_repo.py  sso_repo.py  tenant_repo.py  user_repo.py
src/deepvu/routers/: __init__.py  auth.py  dashboards.py  query.py  tenants.py  users.py  whitelabel.py
src/deepvu/schemas/: __init__.py  auth.py  dashboard.py  query.py  tenant.py  user.py  whitelabel.py
tests/: conftest.py
tests/e2e/: test_multi_tenant_isolation.py
tests/unit/: test_analytics_duckdb.py  test_auth_middleware.py  test_config.py  test_css_sanitizer.py  test_dashboard_config.py  test_dashboard_endpoints.py  test_jwt_handler.py  test_migrations.py  test_models.py  test_rate_limiter.py  test_rls_injector.py  test_rls_validator.py  test_schemas.py  test_tenant_crud.py  test_tenant_endpoints.py  test_tenant_resolver.py  test_user_crud.py  test_user_endpoints.py  test_whitelabel.py
(+1 files in other folders)
